--- a/playground/nextjs/package.json
+++ b/playground/nextjs/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@novu/react": "workspace:*",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
